--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ The following people have made contributions to the project:
 
 Antti Kantee <pooka@iki.fi>
 Gal Sagie <gal.sagie@gmail.com>
+Alexander Guy <alexander.guy@andern.org>
