--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ The following people have made contributions to the project:
 Antti Kantee <pooka@iki.fi>
 Gal Sagie <gal.sagie@gmail.com>
 Alexander Guy <alexander.guy@andern.org>
+Yaron Wahl <awahl@yahoo.com>
