--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-The following people have made contributions to the project:
+The following people have made contributions to this repository:
 
 Antti Kantee <pooka@iki.fi>
 Gal Sagie <gal.sagie@gmail.com>
